styled the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adunare Numere</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        input {
+            margin: 5px 0;
+        }
+    </style>
     <script>
         function adunaNumere() {
             const numar1 = parseFloat(document.getElementById('numar1').value) || 0;
